--- a/package.json
+++ b/package.json
@@ -9,13 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.0",
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "expo": "~46.0.16",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "nativewind": "^2.0.11",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-currency-formatter": "^1.1.0",
+    "react-native": "0.69.6",
+    "react-native-animatable": "^1.3.3",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-maps": "^1.3.2",
+    "react-native-progress": "^5.0.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/preset-react": "^7.18.6",
+    "tailwindcss": "^3.2.2"
   },
   "private": true
 }
